appId: com.yourcompany.tutorialmaestro
---
- launchApp
- tapOn: "Login.*"
- assertVisible: "User, welcome to our app!.*"
- tapOn: 
    id: 'username'
- inputText: "foo"
- pressKey: "enter"
- tapOn: 
    id: 'password'
- inputText: "password"
- pressKey: "enter"
- tapOn: "Sign-in"
- assertVisible: "Welcome, foo!"
- tapOn: "Log out"
- assertVisible: "User, welcome to our app!.*"